--- a/back_font_test/pebblesite/templates/website/about.html
+++ b/back_font_test/pebblesite/templates/website/about.html
@@ -95,9 +95,8 @@
                               Have you noticed that there are some little penguins waddling around on the site? <br>
                               Yes! They have a story too! <br>
                               For some species of penguins (Adelie, Chinstrap and Gentoo), <br>
-                              a male penguin searches for the prettier pebble to propose to the penguin of its life.
-                              <br>
-                              (after all, humans also propose with a diamond) br
+                              a male penguin searches for the prettier pebble to propose to the penguin of its life.<br>
+                              (after all, humans also propose with a diamond) <br>
                               If the other penguin likes it, it will bring it back to its nest, <br>
                               Then the two love birds can build up their pebble nest to raise their family! <br>
 
@@ -110,10 +109,9 @@
                               <li>2. In your personal page, click “Quiz” to start.</li>
                               <li>3. Once you finish the quiz, click on “Match”.</li>
                               <li>4. Your top three matches will show up on the page.</li>
-                              <li>5. You can also find your other matches with their scores on “My Match”.</li>
-                              <li>6. You have three complementary pebbles to decide who to give a pebble to.</li>
-                              <li>7. If your match accepts your pebble, then you might have found your match!</li>
-                              <li>8. Receive a notification in your mailbox whether your pebble has been accepted or rejected.</li>
+                              <li>5. You have three complementary pebbles to decide who to give a pebble to.</li>
+                              <li>6. If your match accepts your pebble, then you might have found your match!</li>
+                              <li>7. Receive a notification in your mailbox whether your pebble has been accepted or rejected.</li>
                          </ul>
 
                     </div>
