--- a/back_font_test/pebblesite/templates/website/account_base.html
+++ b/back_font_test/pebblesite/templates/website/account_base.html
@@ -8,8 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="fullPage fixed full-screen backgrounds." />
   <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+
+  <link rel="stylesheet" href="{% static 'styles/style.css' %} ">
   <link rel="stylesheet" href="{% static 'styles/login.css' %}">
   <link rel="stylesheet" href="{% static 'styles/signup.css' %}">
 
@@ -45,7 +47,7 @@
                <div> {{ request.user.username }}</div>
           </div>
  
-          <div class="section2 fp-auto-height" id="section2">
+          <div>
                {% block body %}{% endblock %}
           </div>
      </div>
@@ -57,5 +59,8 @@
 <!--   <script type="text/javascript" src="./index.js"></script> -->
   <script type="text/javascript" src="./js/home.js"></script>
   <script type="text/javascript" src="./js/form.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body >
 </html >
