--- a/website/templates/account.html
+++ b/website/templates/account.html
@@ -10,12 +10,12 @@
   <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
   <link href="./vendor/css/bootstrap.css" rel="stylesheet">
 
-  <!-- Font awesome -->
+  <!-- Font awesome --
   <link rel="stylesheet" href="Assets/css/fontawesome.css">
   <link rel="stylesheet" href="Assets/css/brands.css">
   <link rel="stylesheet" href="Assets/css/solid.css">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css">-->
 </head>
 
 <body>
