--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -10,13 +10,13 @@
   <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
   <link href="./vendor/css/bootstrap.css" rel="stylesheet">
 
-  <!-- Font awesome -->
+  <!-- Font awesome --
   <link rel="stylesheet" href="Assets/css/fontawesome.css">
   <link rel="stylesheet" href="Assets/css/brands.css">
   <link rel="stylesheet" href="Assets/css/solid.css">
 
   <link rel="stylesheet" href="../static/styles/style.css">
-  <link rel="stylesheet" href="../static/styles/login.css">
+  <link rel="stylesheet" href="../static/styles/login.css">-->
 </head>
 
 <body>
