--- a/pebblesite/templates/website/mymatch_base.html
+++ b/pebblesite/templates/website/mymatch_base.html
@@ -51,10 +51,10 @@
     </div>
     <div>
           <div>
-            <div>Here your destiny</div>
+            <!--<div>Here your destiny</div>-->
             {% block body %}{% endblock %}
           </div>
-     </div>
+    </div>
 </div>
   <footer>
     <hr>
