update mymatch page

--- a/pebblesite/templates/website/about.html
+++ b/pebblesite/templates/website/about.html
@@ -41,7 +41,7 @@
           <div class="section1 row">
                <div class="col-sm-3">
                     <span  type="button" data-show="about">
-                         <img src="../static/images/Home_page_penguins.png" class="icon-chim"alt="logo-chimcanhcut">
+                         <!--<img src="../static/images/Home_page_penguins.png" class="icon-chim"alt="logo-chimcanhcut">-->
                     </span>
                </div>
                <div class="col-sm-3">
