--- a/pebblesite/account/static/styles/mymatch.css
+++ b/pebblesite/account/static/styles/mymatch.css
@@ -1,13 +1,20 @@
-
- /* person */
-
- .person1 img {
-     width: 100px;
-     margin-bottom: -30px;
-     margin-left: -30px;
-     
+#sendPebble1 {
+     position: absolute;
+     z-index: 1;
 }
-.name_match {
+#sendPebble {
+     z-index: 0;
+
+ }
+#result {
+     position: relative;
+
+ }
+div#sendPebble1 {
+     width: 50rem;
+ }
+
+ .name_match {
      background-color: var(--color-box-violet);
      border: 1px solid var(--color-box-violet);
      width: 20rem;
@@ -16,33 +23,11 @@
      font-size: 20px;
      text-align: center;
      font-family: var(--font-family-custom);
-  /*    color: var( --color-text-rose) */
+     color: black
+   }
+img#myPicture {
+     margin-top: 2rem;
+     width: 400px;
+     height: 400px;
+     border: 1px solid black;
  }
- .name_match:hover {
-     background-color: rgba(238, 130, 238, 0.668);
- }
- .name_match p{
-     margin-top: 20px;
- }
-/* 
- .section3 {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-
-
-    border: 1px solid white;
-    border-radius: 30px;
-
-    width: 30em;
-    height: 10rem;
-
-    margin: 20px 0 20px 0;
-    padding: 20px;
-    background-color: #ca9fdb5e;
-    box-shadow: 0em 0.4em 0.4em 0.4em #ffffff94;
-
-} */
