--- a/pebblesite/account/static/styles/style.css
+++ b/pebblesite/account/static/styles/style.css
@@ -4,8 +4,6 @@
 }
 :root {
      --font-family-custom:'CustomFont', sans-serif;
-
-
      --color-text-rose: rgb(255, 0, 187);
      --color-text-rose-opacity:  rgba(255, 0, 187, 0.21);
      --color-box-violet: #ca9fdb5e;
@@ -51,7 +49,7 @@ body {
      height: 100vh;
      padding: 20px;
      background-size: cover;
-     background-image: url(../images/temporaire.jpg);
+     background-image: url(../images/background.png);
      background-attachment: fixed;
 }
 
@@ -122,7 +120,7 @@ body {
      flex-direction: column;
 
 
-     border: 1px solid white;
+     border: 2px solid rgb(255, 0, 187);
      border-radius: 30px;
 
      width: 50em;
@@ -131,9 +129,12 @@ body {
      margin: 50px 0 100px 0;
      padding: 20px;
      background-color: #ca9fdb5e;
-     box-shadow: 0em 0.4em 0.4em 0.4em #ffffff94;
+     box-shadow: 0em 0.4em 0.4em 0.4em #df39b594;
 }
 
+.intro-text {
+     color: white;
+}
 
 .penguin_photo {
      display: flex;
@@ -150,6 +151,7 @@ body {
 .footer {
      font-size: 10px;
      color: rgba(0, 0, 0, 0.341);
+     margin-bottom: 0;
 }
 
 /* section 1 */
@@ -179,9 +181,9 @@ body {
      font-size: 20px;
     
      line-height: 2.5rem;
-
-     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-     color: rgb(153, 36, 36);
+     font-family: 'Unna', serif;
+     /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
+     color: rgb(65, 16, 97);
 
      transition: 0.4s;
 
@@ -239,4 +241,19 @@ body {
      background-color: #ca9fdb5e;
      box-shadow: 0em 0.4em 0.4em 0.4em #ffffff94;
  
+ }
+
+.pebbleShow {
+     visibility: visible;
+     opacity: 1;
+ }
+.pebbleHide {
+     visibility: hidden;
+     opacity: 0;
+ }
+ #result{
+     position: relative;
+ }
+ #sendPebble1{
+     position: absolute;
  }
