--- a/pebblesite/templates/authn/logged_out.html
+++ b/pebblesite/templates/authn/logged_out.html
@@ -4,7 +4,8 @@
 {% block body %}
  <title>Logout</title>
     <div class="alert alert-info" role="alert">
-  Thanks for spending time with Pebble Match today. Hope to see you soon!
+  Thanks for spending time with Pebble Match today. <br>
+  Hope to see you soon!
 </div>
 
 {% endblock %}
