--- a/pebblesite/templates/website/mymatch_base.html
+++ b/pebblesite/templates/website/mymatch_base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +16,9 @@
 
   <link rel="stylesheet" href="{% static 'styles/style.css' %}">
   <link rel="stylesheet" href="{% static 'styles/login.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/mymatch.css' %} ?{% now 'U' %}">
+  <link rel="stylesheet" href="{% static 'styles/mymatch.css' %}">
+
+<!--   <link rel="stylesheet" href="{% static 'styles/mymatch.css' %} ?{% now 'U' %}"> -->
 
 </head>
 
@@ -44,7 +47,7 @@
   </header>
   
      <div class="fullpage">          
-          <div class="logout button-style ">
+          <div class="logout button-style">
                <div>Congratulation</div>
                <div> {{ request.user.username }}</div>
           </div>
@@ -60,9 +63,7 @@
     <hr>
     <p class="footer">Project Portfolio ToNoeMia</p>
     </footer>
-<!--   <script type="text/javascript" src="./index.js"></script> -->
-  <script type="text/javascript" src="./js/home.js"></script>
-  <script type="text/javascript" src="./js/form.js"></script>
+  <script type="text/javascript" src="{% static 'mymatch.js' %}"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
