--- a/pebblesite/account/static/styles/login.css
+++ b/pebblesite/account/static/styles/login.css
@@ -20,7 +20,7 @@ a {
 }
 
 h1 {
-  color: white;
+  color: rgb(89, 10, 179);
   font-weight: 200;
 }
 
@@ -77,7 +77,7 @@ h2.inactive {
 }
 
 h2.active {
-  color: #0d0d0d;
+  color: black;
   border-bottom: 2px solid #FF62C7 ;
 }
 
@@ -195,8 +195,8 @@ input[type=text]:placeholder {
 /* account page */
 .greeting{
   color: var(--color-text-rose);
-  
 }
+
 .logout{
   width: 40rem;
   margin-top: 40px;
@@ -238,12 +238,6 @@ input.btn.btn-primary:hover {
   font-family: var(--font-family-custom);
   color: var(--color-text-rose)
 }
-
-
-.sendPebble {
-  margin-top: 5rem;
-}
-
 .quiz_block {
   font-family: 'Shantell Sans', cursive;
 }
